refactor: stabilize worker connection result transport